Fix intel title alignment on mobile

--- a/client/src/components/intel/intel.css
+++ b/client/src/components/intel/intel.css
@@ -189,3 +189,11 @@
     width: 100%;
   }
 }
+
+@media only screen and (max-width: 900px) {
+  .intel-connect-title {
+    font-size: 16px;
+    margin-left: 30px;
+    margin-bottom: 50px;
+  }
+}
